syntax = "proto3";

message TritonBotInit {
  string address = 1;
  int32 port = 2;
}